--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@
 
             </section>
             <div id="eventwrap">
-                <ul>
+                <ul id="first">
                     <li id="slide1">
                         <ul>
                     <li>
@@ -1696,6 +1696,40 @@
                         </figure>
                     </li>
                 </ul>
+                </li>
+                <li id="slide2">
+                    <h3>최소 3인부터 신청 가능하며, 한 분은 45세 이상이어야 합니다.</h3>
+                <div class="selectwrap">
+                    <input type="radio" value="3명">
+                    <label for="">3명</label>
+                    <input type="radio" value="4명">
+                    <label for="">4명</label>
+                    <input type="radio" value="5명">
+                    <label for="">5명</label>
+                    <input type="radio" value="6명">
+                    <label for="">6명</label>
+                    <input type="radio" value="7명">
+                    <label for="">7명</label>
+                    <input type="radio" value="8명">
+                    <label for="">8명</label>
+                </div>
+                <button>다음 >></button>
+                </li>
+                <li id="slide3">
+                    <p>안심하세요! 패밀리유에서는 고객님의 소중한 개인정보를 
+                        <br>
+                        상담 외 어떠한 목적으로도 사용하지 않습니다.
+                        <br>
+                        ※ 각 스튜디오 지점에 따라 헬퍼비 3만원이 발생할 수 있습니다.
+                        <input type="text" placeholder="이름">
+                        <input type="text" placeholder="연락처">
+                        <input type="" placeholder="지역 선택">
+                        <select name="" id="">
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                        </select>
+                    </p>
                 </li>
                 </ul>
             </div>
